feat: revamp mobile app and expand inventory mobile APIs
- Mobile: rebuild home dashboard, add batch/check/loss/records pages,
  drop legacy exception/production/scan pages, refresh stock-in /
  stock-out flows, add NetworkBanner + network store, and refresh login
- Mobile build: add logo asset, packaging guide, manifest tweaks
- API: add MobileHomeResponse and ExpiringBatchItem DTOs with a new
  inventory mobile-home endpoint and stock-batch expiry queries
- Sales: rename order_import_batch.batch_no to import_no across
  schema, entity, DTO, and import service
- Repo: ignore root-level scratch notes/screenshots and drop CLAUDE.md

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>